Fix about section

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 <div class="container-fluid d-md-none p-3">
     <div class="card border-0 text-green">
         <div class="row g-0">
-            <div class="col-6">
-                <img src="./img/about-img.jpeg" alt="About Kaori" class="img-fluid h-100 object-fit-cover">
+            <div class="col-sm-6">
+                <img src="./img/about-img.jpeg" alt="About Kaori" class="img-fluid">
             </div>
-            <div class="col-6">
-                <div class="card-body p-2">
+            <div class="col-sm-6">
+                <div class="card-body">
                     <h4 class="mt-0">About Kaori</h4>
                     <p class="mb-2 small">I have always been around pets since I was a kid and have a passion for caring for them. 
                         Currently away from my three pets back home, two of which are seniors, I have experience administering oral medications. 
