--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                         <input type="text" class="form-control mb-2" id="name" name="name" placeholder="Enter your name">
 
                         <label for="email" class="form-label">Email</label>
-                        <input type="email" class="form-control mb-2" id="email" name="email" placeholder="Enter your email">
+                        <input type="text" class="form-control mb-2" id="email" name="email" placeholder="Enter your email">
 
                         <label for="phone" class="form-label">Phone</label>
-                        <input type="tel" class="form-control mb-2" id="phone" name="phone" placeholder="Enter your phone number">
+                        <input type="text" class="form-control mb-2" id="phone" name="phone" placeholder="Enter your phone number">
 
                         <label for="time" class="form-label">Time</label>
                         <select name="time-slot" id="time-slot" class="form-select mb-2">
