--- a/testimonials.html
+++ b/testimonials.html
@@ -27,10 +27,10 @@
                         <a href="./testimonials" class="nav-link active">Testimonials</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./pricing.html" class="nav-link">Prices</a>
+                        <a href="./pricing" class="nav-link">Prices</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./appointment.html" class="nav-link">Book Appointment</a>
+                        <a href="./appointment" class="nav-link">Book Appointment</a>
                     </li>
                 </ul>
             </div>
