--- a/appointment.html
+++ b/appointment.html
@@ -19,16 +19,16 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a href="./index.html" class="nav-link">Home</a>
+                        <a href="./" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./testimonials.html" class="nav-link">Testimonials</a>
+                        <a href="./testimonials" class="nav-link">Testimonials</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./pricing.html" class="nav-link">Prices</a>
+                        <a href="./pricing" class="nav-link">Prices</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./appointment.html" class="nav-link active">Book Appointment</a>
+                        <a href="./appointment" class="nav-link active">Book Appointment</a>
                     </li>
                 </ul>
             </div>
