--- a/appointment.html
+++ b/appointment.html
@@ -38,7 +38,7 @@
     <!-- Book Appointment -->
      <section class="calendar-section">
         <h2 class="text-center text-green mb-5">Book Appointment</h2>
-        <div class="calendar-card-container mb-5">
+        <div class="calendar-card-container">
             <div class="calendar-card">
                 <div class="calendar-wrapper position-relative">
                     <iframe class="w-100 h-100 appointment-calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FLima&showPrint=0&src=a2Fvcmkub2NoYTAzQGdtYWlsLmNvbQ&src=ZXMtNDE5LnBlI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=ZXMucGUjaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%237986cb&color=%230b8043&color=%230b8043" frameborder="0" scrolling="no"></iframe>
