Add Pet Boarding Service

--- a/index.html
+++ b/index.html
@@ -178,6 +178,40 @@
         </div>
         <div class="col-md-6 col-lg-3">
             <div class="card">
+                <img src="./img/in home.jpg" alt="Boarding Pet Sitting" class="card-img">
+                <div class="card-content">
+                    <div class="card-header border-0">
+                        <i class="fa-solid fa-home fa-3x"></i>
+                        <h3 class="card-title">Boarding Pet Sitting</h3>
+                    </div>
+                    <ul class="list-unstyled">
+                        <li>
+                            <i class="fa-solid fa-check me-2 mt-2"></i>
+                            <div>Pet stays at my home</div>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check me-2 mt-2"></i>
+                            <div>Safe and comfortable environment</div>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check me-2 mt-2"></i>
+                            <div>Regular feeding and exercise</div>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check me-2 mt-2"></i>
+                            <div>Medication administration</div>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-check me-2 mt-2"></i>
+                            <div>Daily updates and photos</div>
+                        </li>
+                    </ul>
+                    <a href="./pricing.html" class="btn btn-primary">View Prices</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-3 offset-lg-1">
+            <div class="card">
                 <img src="./img/pet taxi.jpg" alt="Extra Services" class="card-img">
                 <div class="card-content">
                     <div class="card-header border-0">
