--- a/pricing.html
+++ b/pricing.html
@@ -91,7 +91,7 @@
                                 </div>
                             </div>
                             <div class="text-center mt-3 py-3">
-                                <a href="./index.html#contact" class="btn btn-primary">Book Now</a>
+                                <a href="./appointment" class="btn btn-primary">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -148,7 +148,7 @@
                                 </div>
                             </div>
                             <div class="text-center mt-3 py-3">
-                                <a href="./index.html#contact" class="btn btn-primary">Book Now</a>
+                                <a href="./appointment" class="btn btn-primary">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -179,19 +179,6 @@
                                 </div>
                                 <div class="accordion-item">
                                     <h2 class="accordion-header">
-                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#overnightTwo">
-                                            <i class="fa-solid fa-clock me-2"></i>24/7 Care
-                                        </button>
-                                    </h2>
-                                    <div id="overnightTwo" class="accordion-collapse collapse" data-bs-parent="#overnightAccordion">
-                                        <div class="accordion-body">
-                                            <p class="mb-2">Constant care and attention throughout the day</p>
-                                            <p class="price">$85 per day</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#overnightThree">
                                             <i class="fa-solid fa-dog me-2"></i>Additional Pet
                                         </button>
@@ -205,7 +192,51 @@
                                 </div>
                             </div>
                             <div class="text-center mt-3 py-3">
-                                <a href="./index.html#contact" class="btn btn-primary">Book Now</a>
+                                <a href="./appointment" class="btn btn-primary">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Boarding Pet Sitting Card -->
+                <div class="col-12 col-md-10 col-lg-8 col-xl-6">
+                    <div class="card">
+                        <img src="./img/boarding.jpg" alt="Boarding Pet Sitting" class="card-img">
+                        <div class="card-content">
+                            <div class="card-header border-0 py-3">
+                                <i class="fa-solid fa-house fa-2x"></i>
+                                <h3 class="card-title mb-0">Boarding Pet Sitting</h3>
+                            </div>
+                            <div class="accordion" id="boardingAccordion">
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#boardingOne">
+                                            <i class="fa-solid fa-moon me-2"></i>Overnight Stay
+                                        </button>
+                                    </h2>
+                                    <div id="boardingOne" class="accordion-collapse collapse show" data-bs-parent="#boardingAccordion">
+                                        <div class="accordion-body">
+                                            <p class="mb-2">Full overnight care and attention</p>
+                                            <p class="price">$40 per night</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header">
+                                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#boardingTwo">
+                                            <i class="fa-solid fa-dog me-2"></i>Daycare
+                                        </button>
+                                    </h2>
+                                    <div id="boardingTwo" class="accordion-collapse collapse" data-bs-parent="#boardingAccordion">
+                                        <div class="accordion-body">
+                                            <p class="mb-2">Daycare for your pet</p>
+                                            <p class="price">$25 per day</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="text-center mt-3 py-3">
+                                <a href="./appointment" class="btn btn-primary">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -275,7 +306,7 @@
                                 </div>
                             </div>
                             <div class="text-center mt-3 py-3">
-                                <a href="./index.html#contact" class="btn btn-primary">Book Now</a>
+                                <a href="./appointment" class="btn btn-primary">Book Now</a>
                             </div>
                         </div>
                     </div>
